nest-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-service
spec:
  replicas: 1
  selector:
    matchLabels:
        app: nest-service
  template:
    metadata:
      labels:
        app: nest-service
    spec:
      containers:
        - image: 2nnar/nest-service
          imagePullPolicy: Always
          name: nest-service
          ports:
            - containerPort: 5005
