nest-service/nest-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nest-service
spec:
  containers:
  - image: nest-service
    name: nest-service
