nest-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-service
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: nest-service
